# math435

bose-einstein/: Cargo.toml  analysis.ipynb
bose-einstein/src/: main.rs
connectome-model/: Cargo.toml
connectome-model/src/: lib.rs  main.rs  sim.rs  simplex.rs
