[package]
name = "bose-einstein"
version = "0.1.0"
authors = ["aemino <aeminodev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.4"
indicatif = { version = "0.15.0", features = ["rayon"] }
petgraph = "0.5.1"
rand = "0.7.3"
rand_distr = "0.3.0"
rayon = "1.5.0"
